--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,6 @@
     <string name="aahan_commercial_and_co">Aahan Commercial and co.</string>
     <string name="made_in_india">Made In India</string>
     <string name="image">image</string>
-    <string name="customer_details">Customer Details</string>
     <string name="phone">Phone</string>
     <string name="date">Date</string>
     <string name="problem">Problem</string>
@@ -54,4 +53,22 @@
     <string name="upload_tax_invoice">upload Tax Invoice</string>
     <string name="cancel">Cancel</string>
     <string name="upload">Upload</string>
+    <string name="work_type">Work Type</string>
+    <string name="customer_details">Customer Details</string>
+    <string name="log_details">Log Details</string>
+    <string name="problem_ndescription">Problem\ndescription</string>
+    <string name="phone_nnumber">Phone\nNumber</string>
+    <string name="payment_details">Payment Details</string>
+    <string name="all_logs">All Logs</string>
+    <string name="total_logs">Total Logs:-</string>
+    <string name="only_visit">Only Visit:-</string>
+    <string name="total_complete_pay_call_logs">Total Complete Pay Call Logs:-</string>
+    <string name="paid_call_logs">Paid Call Logs:-</string>
+    <string name="due_call_logs">Due Call Logs:-</string>
+    <string name="payment_date">Payment Date</string>
+    <string name="payment_id">Payment ID</string>
+    <string name="dealer_name">Dealer Name:</string>
+    <string name="naration">Naration</string>
+    <string name="no_of_all">No Of All:</string>
+    <string name="amount">Amount:</string>
 </resources>
